--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f8f9fa;
+            background-color: #fff;
             color: #333;
         }
         header {
-            background-color: #00274d;
+            background-color: #7a121c;
             color: white;
             padding: 15px 20px;
         }
@@ -25,7 +25,7 @@
         .hero {
             text-align: center;
             padding: 100px 20px;
-            background: linear-gradient(to right, #003366, #004080);
+            background: linear-gradient(to right, #a40f1e, #c91b2d);
             color: white;
         }
         .hero h1 {
@@ -38,6 +38,7 @@
         .services {
             padding: 50px 20px;
             background-color: #fff;
+            border: 4px solid #a40f1e;
         }
         .services h2 {
             font-size: 36px;
@@ -46,6 +47,7 @@
         }
         .services .service-item {
             background: #f0f0f0;
+            border: 2px solid #a40f1e;
             border-radius: 8px;
             padding: 20px;
             text-align: center;
@@ -56,7 +58,7 @@
             box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
         }
         footer {
-            background-color: #00274d;
+            background-color: #7a121c;
             color: white;
             padding: 20px;
             text-align: center;
